<resources>
    <string name="app_name">WuZiQi</string>
    <string name="pve">1 Player</string>
    <string name="pvp">2 Players</string>
    <string name="eve">2 Computers</string>
    
    <string name="pref">Preferences</string>
    <string name="overlines">Overlines count as</string>
    <string name="undoLimit">Undo limit</string>
    <string name="aiFirst">Computer first</string>
    <string name="difficulty">AI Level</string>

    <string name="ai1level">AI 1 Level</string>
    <string name="ai2level">AI 2 Level</string>

    <string-array name="overlines_array">
        <item>None</item>
        <item>Lost</item>
        <item>Winning</item>
    </string-array>

    <array name="overlines_array_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </array>

    <string-array name="undo_limit_array">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>Unlimited</item>
    </string-array>

    <integer-array name="undo_limit_array_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>1000</item>
    </integer-array>

    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="computer">Computer</string>
    <string name="c1">Computer 1</string>
    <string name="c2">Computer 2</string>
    <string name="black">(Black)</string>
    <string name="white">(White)</string>
    <string name="acceptsDraw"> accepts draw</string>
    <string name="refusesDraw"> refuses draw</string>

    <string name="undo">Undo</string>

    <string name="pleaseConfirm">Please Confirm</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="winMsg">wins!</string>
    <string name="player">Player</string>
    <string name="tie">Ties!</string>

    <string name="confirmExit">Are you sure to exit?</string>

    <string name="askForDraw">Ask for draw</string>
    <string name="yourOpponent">Your opponent </string>
    <string name="opponentAskDraw"> asks for draw!</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="alwaysRefuse">Always Refuse</string>
</resources>
