<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:text="@string/overlines" />

        <Spinner
            android:id="@+id/overlinesSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:entries="@array/overlines_array" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/aiFirstSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aiFirst" />
    </LinearLayout>

    <Button
        android:id="@+id/pveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPveButtonClicked"
        android:text="@string/pve" />

    <Button
        android:id="@+id/pvpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPvpButtonClicked"
        android:text="@string/pvp" />
</LinearLayout>