<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/blackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/black" />

        </LinearLayout>

        <Button
            android:id="@+id/p1DrawBtn"
            android:onClick="p1AsksDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/p1UndoBtn"
            android:enabled="false"
            android:text="@string/askForDraw"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/p1UndoBtn"
            android:onClick="p1Undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:text="@string/undo" />

    </RelativeLayout>


    <com.trashsoftware.wuziqi.graphics.ChessboardView
        android:id="@+id/chessboardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.84" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/whiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/white" />
        </LinearLayout>

        <Button
            android:id="@+id/p2DrawBtn"
            android:onClick="p2AsksDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/p2UndoBtn"
            android:enabled="false"
            android:text="@string/askForDraw"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/p2UndoBtn"
            android:onClick="p2Undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:text="@string/undo" />


    </RelativeLayout>

</LinearLayout>